# xe

./: .gitignore  README.md  go.mod  go.sum  main.go  mkdocs.yml  xe.toml
docs/: README.md  architecture.md  commands.md  configuration.md  getting-started.md  index.md  performance.md  security.md  troubleshooting.md  usage.md  workflows.md
docs/src/: index.md
docs/stylesheets/: dark.css
rust/xe_cli/: Cargo.toml
rust/xe_cli/src/: main.rs
scripts/: build_windows_rust.ps1
src/cmd/: add.go  auth.go  clean.go  compat_commands.go  config.go  config_helper.go  dist.go  init.go  inspect.go  io.go  mirror.go  pkg_ops.go  plugin.go  requirements_helper.go  root.go  run.go  runtime_helper.go  self.go  setup.go  shell.go  snapshot.go  use.go  venv.go  workspace.go
src/internal/cache/: cas.go
src/internal/core/: snapshot.go
src/internal/engine/: install.go
src/internal/lockfile/: lockfile.go
src/internal/project/: config.go
src/internal/python/: manager.go  manager_test.go
src/internal/resolver/: metadata.go  pypi.go  resolver.go
src/internal/security/: auth.go  auth_linux.go  auth_windows.go
src/internal/telemetry/: profiler.go
src/internal/utils/: json.go  path.go
src/internal/xedir/: xedir.go
