[package]
name = "xe"
version = "2.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
dirs = "6.0.0"
hex = "0.4.3"
rayon = "1.11.0"
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sha1 = "0.10.6"
sha2 = "0.10.9"
time = { version = "0.3.44", features = ["formatting"] }
toml = "0.9.8"
walkdir = "2.5.0"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
